--- a/.github/workflows/node-publish-internal.yml
+++ b/.github/workflows/node-publish-internal.yml
@@ -14,7 +14,6 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    name: Publish package to Github repository
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -39,7 +38,7 @@ jobs:
       - run: npm run lint --if-present
       - run: npm run check-types --if-present
       - run: npm test --if-present
-      - run: npm build
+      - run: npm run build
 
       - name: Publish (if version has been updated)
         uses: JS-DevTools/npm-publish@v1
