--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -56,7 +56,7 @@ jobs:
 
       # upload test results, if found
       - name: Upload test results (if found)
-      - uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
           name: test-results
