switch on npm audit by default

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -20,7 +20,7 @@ on:
       audit-script:
         required: false
         type: string
-        default: npm run audit --if-present
+        default: npm audit
       build-script:
         required: false
         type: string
