--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -4,7 +4,7 @@ on:
       working-directory:
         required: false
         type: string
-        default: ./
+        default: './'
       lint-script:
         required: false
         type: string
