--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -4,7 +4,7 @@ on:
       working-directory:
         required: false
         type: string
-        default: './'
+        default: ./
       lint-script:
         required: false
         type: string
@@ -33,7 +33,7 @@ on:
 defaults:
   run:
     shell: bash
-    working-directory: ${{ inputs.lint-script }}
+    working-directory: ${{ inputs.working-directory }}
 
 jobs:
   node-ci:
