--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -9,7 +9,7 @@ on:
         required: false
         type: string
         default: ''
-      output-path:
+      upload-path:
         required: false
         type: string
         default: build
@@ -61,5 +61,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ inputs.artifact-name }}
-          path: ${{ inputs.output-folder }}
+          path: ${{ inputs.upload-path }}
           if-no-files-found: error
