--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -8,7 +8,7 @@ on:
       working-directory:
         required: false
         type: string
-        default: ''
+        default: '.'
       upload-path:
         required: false
         type: string
@@ -61,5 +61,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ inputs.artifact-name }}
-          path: ${{ inputs.upload-path }}
+          path: ${{ inputs.working-directory }}/${{ inputs.upload-path }}
           if-no-files-found: error
