--- a/.github/workflows/node-deploy-azure-web-app.yml
+++ b/.github/workflows/node-deploy-azure-web-app.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: ${{ inputs.artifactName }}
+          name: ${{ inputs.artifact-name }}
 
       - name: 'Deploy to Azure WebApp'
         id: deploy-to-webapp
