--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -33,6 +33,9 @@ on:
         required: false
         type: boolean
         default: false
+      npm-token:
+        description: "Auth token to fetch private packages"
+        required: false
 
 jobs:
   node-ci:
@@ -62,7 +65,7 @@ jobs:
       # run npm ci preventing script access to npm auth token
       - run: npm ci --ignore-scripts
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ inputs.npm-token || secrets.GITHUB_TOKEN }}
       # allow scripts to run without npm auth token
       - run: npm rebuild && npm run prepare --if-present
 
